fixed dimentions on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -41,7 +41,7 @@ nav ul a {
     color: black
 }
 nav ul li {
-    margin: 1em 0 1em 0;
+    margin: 0 0 1em 0;
     color: #7c7c7c;
     font-weight: bolder;
 }
@@ -63,8 +63,8 @@ nav ul li {
     justify-content: space-between;
 }
 .icon {
-    width: 31px;
-    height: 31px;
+    width: 35px;
+    height: 35px;
     color: #7c7c7c;
 }
 .img {
